--- a/project.html
+++ b/project.html
@@ -34,8 +34,8 @@
             </div>
                 <p>A brief description of the website purpose and the key features</p>
                 <p><strong>Technologies Used:</strong>HTML,CSS, JAVASCRIPT</p>
-                <a href="E:\RESUMEPROJECTS\WATCH-STORE-WEBSITE" class="btn">Live Demo</a>
-                <a href="#" class="btn">Github Repository</a>
+                <a href="https://tandelnancy7.github.io/Watch-store-website/" class="btn">Live Demo</a>
+                <a href="https://github.com/tandelnancy7" class="btn">Github Repository</a>
       </div>
 
       <div class="grid-item">
@@ -46,7 +46,7 @@
                 <p>A brief description of the website purpose and the key features</p>
                 <p><strong>Technologies Used:</strong>HTML,CSS, JAVASCRIPT</p>
                 <a href="https://tandelnancy7.github.io/demo-website/" class="btn">Live Demo</a>
-                <a href="#" class="btn">Github Repository</a>
+                <a href="https://github.com/tandelnancy7" class="btn">Github Repository</a>
       </div>
 
       
