--- a/project.html
+++ b/project.html
@@ -45,7 +45,8 @@
             </div>
                 <p>A brief description of the website purpose and the key features</p>
                 <p><strong>Technologies Used:</strong>HTML,CSS, JAVASCRIPT</p>
-                <a href="https://tandelnancy7.github.io/demo-website/" class="btn">Live Demo</a>
+                <a href="https://tandelnancy7.github.io/Portfolio-website/
+                " class="btn">Live Demo</a>
                 <a href="https://github.com/tandelnancy7" class="btn">Github Repository</a>
       </div>
 
